@@ -1,138 +1,10 @@
 <!--
-<<<<<<< HEAD
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at
-=======
- - Copyright 1999-2011 Alibaba Group.
- -  
- - Licensed under the Apache License, Version 2.0 (the "License");
- - you may not use this file except in compliance with the License.
- - You may obtain a copy of the License at
- -  
- -	  http://www.apache.org/licenses/LICENSE-2.0
- -  
- - Unless required by applicable law or agreed to in writing, software
- - distributed under the License is distributed on an "AS IS" BASIS,
- - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- - See the License for the specific language governing permissions and
- - limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-    <groupId>com.alibaba</groupId>
-	<artifactId>dubbo-parent</artifactId>
-	<version>2.5.4-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>${project.artifactId}</name>
-	<description>The parent project of dubbo</description>
-	<url>http://code.alibabatech.com/wiki/display/dubbo</url>
-	<inceptionYear>2011</inceptionYear>
-	<licenses>
-		<license>
-			<name>Apache 2</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-			<comments>A business-friendly OSS license</comments>
-		</license>
-	</licenses>
-	<organization>
-		<name>Alibaba</name>
-		<url>http://www.alibaba.com</url>
-	</organization>
-	<modules>
-		<module>hessian-lite</module>
-		<module>dubbo-common</module>
-		<module>dubbo-container</module>
-		<module>dubbo-remoting</module>
-		<module>dubbo-rpc</module>
-		<module>dubbo-filter</module>
-		<module>dubbo-cluster</module>
-		<module>dubbo-registry</module>
-		<module>dubbo-monitor</module>
-		<module>dubbo-config</module>
-		<module>dubbo</module>
-		<module>dubbo-simple</module>
-		<module>dubbo-admin</module>
-		<module>dubbo-demo</module>
-	</modules>
-	<profiles>
-		<profile>
-			<id>test</id>
-			<activation>
-				<file>
-					<missing>.project</missing>
-				</file>
-			</activation>
-			<modules>
-				<module>dubbo-test</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>hudson</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<testFailureIgnore>true</testFailureIgnore>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-	<properties>
-		<!-- Common libs -->
-		<spring_version>2.5.6.SEC03</spring_version>
-		<javassist_version>3.15.0-GA</javassist_version>
-		<netty_version>3.2.5.Final</netty_version>
-		<mina_version>1.1.7</mina_version>
-		<grizzly_version>2.1.4</grizzly_version>
-		<httpclient_version>4.1.2</httpclient_version>
-		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
-		<xstream_version>1.4.1</xstream_version>
-		<fastjson_version>1.1.39</fastjson_version>
-		<bsf_version>3.1</bsf_version>
-		<sorcerer_version>0.8</sorcerer_version>
-		<zookeeper_version>3.3.3</zookeeper_version>
-		<zkclient_version>0.1</zkclient_version>
-		<curator_version>1.1.16</curator_version>
-		<jedis_version>2.7.3</jedis_version>
-		<xmemcached_version>1.3.6</xmemcached_version>
-		<cxf_version>2.6.1</cxf_version>
-		<thrift_version>0.8.0</thrift_version>
-		<jfreechart_version>1.0.13</jfreechart_version>
-		<hessian_version>4.0.7</hessian_version>
-		<servlet_version>2.5</servlet_version>
-		<jetty_version>6.1.26</jetty_version>
-		<validation_version>1.0.0.GA</validation_version>
-		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
-		<jcache_version>0.4</jcache_version>
-		<sca_version>2.0-M5.1</sca_version>
-		<guice_version>3.0</guice_version>
-		<cglib_version>2.2</cglib_version>
-		<webx_version>3.0.8</webx_version>
-		<!-- Log libs -->
-		<slf4j_version>1.6.2</slf4j_version>
-		<jcl_version>1.1</jcl_version>
-		<log4j_version>1.2.16</log4j_version>
-		<logback_version>1.0.6</logback_version>
-		<!-- Test libs -->
-		<junit_version>4.10</junit_version>
-		<easymock_version>3.0</easymock_version>
-		<jmockit_version>0.999.8</jmockit_version>
-		<!-- Build args -->
-		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>-->
-		<skip_maven_deploy>false</skip_maven_deploy>
-		<updateReleaseInfo>true</updateReleaseInfo>
-		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
->>>>>>> 89387f8ab18b9f8caf3d6c94de19e7d45f61a2ce
 
       http://www.apache.org/licenses/LICENSE-2.0
 
